--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <main>
+        <!--Aqui pra baixo onde vai ficar-->
       <section class="container">
         <h1><pre>   Login</pre></h1>
         <section class="inputs1">
@@ -23,6 +24,7 @@
                 <label>Sobrenome</label><br><br>
                   <input type="text" placeholder="Digite o sobrenome" requered autocomplete="off">
               </div>
+           <!--Aqui pra cima onde vai ficar-->
         </section> <br>
         <section class="inputs1">
             <div class="numero">
